--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Other ignores added in, we don't need to track the migrations for this project
+myplugins/tag/migrations/0*.py
+
 # Created by https://www.toptal.com/developers/gitignore/api/django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python
 
