--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+# The app packages are ignored for now
+django-tags/
+
 # Other ignores added in, we don't need to track the migrations for this project
 myplugins/tag/migrations/0*.py
 myplugins/crm/migrations/0*.py
+
+# Ignore all ds)store files
+.DS_Store
 
 # Created by https://www.toptal.com/developers/gitignore/api/django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python
