--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-django-rest-framework = "*"
+django = "==5.0.2"
+django-rest-framework = "==0.1.0"
 markdown = "==3.4.4"
 
 [dev-packages]
