Started blog plugin (#12)
* started blog plugin

* updated python and packages

* able to see posts in the blog plugin

* fixed a few bugs and able to look at each individual post

* able to see categories

* added in last minute fixes with documentation

* cleaned up the comments on this plugin

--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==4.2.4"
-django-rest-framework = "*"
+django = "==5.0.2"
+django-rest-framework = "==0.1.0"
 markdown = "==3.4.4"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.12"
